# api/src/Dto/ClientInput.php
@@ -1,0 +1,14 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Dto;
+
+final readonly class ClientInput
+{
+    public function __construct(
+        public string $name,
+        public string $phone
+    ) {
+    }
+}
